# Ichnaea

./: .editorconfig  BUILD  Makefile  README.md  WORKSPACE  buf.yaml  deps.bzl  go.mod  go.sum
.devcontainer/: Dockerfile  devcontainer.json
cmd/gateway/: main.go
cmd/position/: BUILD.bazel  main.go
pkg/position/: BUILD.bazel  service.go
pkg/proto/position/: BUILD.bazel  position.pb.go  position.pb.gw.go  position.proto  position.swagger.json  position_grpc.pb.go
pkg/proto/users/: BUILD.bazel  users.pb.go  users.pb.gw.go  users.proto  users.swagger.json  users_grpc.pb.go
