load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "position_lib",
    srcs = ["main.go"],
    importpath = "github.com/cory-evans/Ichnaea/cmd/position",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/position",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "position",
    embed = [":position_lib"],
    visibility = ["//visibility:public"],
)
